(DOCSP-3047) fix cards collapsing on older browsers

--- a/themes/mongodb/src/css/landing-page.css
+++ b/themes/mongodb/src/css/landing-page.css
@@ -128,7 +128,7 @@
 @media (max-width: 760px) {
   .card_group {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     max-width: 380px;
 
     > * {
